# docs/swagger.yaml
@@ -1651,8 +1651,11 @@ paths:
       tags:
       - transactions
 securityDefinitions:
-  BearerAuth:
+  ApiKeyAuth:
+    description: Description for what is this security definition being used
     in: header
     name: Authorization
     type: apiKey
+  BearerAuth:
+    type: basic
 swagger: "2.0"
